# lumoAI-assgn

./: .env.example  README.md  pyproject.toml
src/: auth.py  helper.py  main.py  models.py  routes.py
